--- a/SATSTrainingApp/app/build.gradle
+++ b/SATSTrainingApp/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile files('libs/svg-android.jar')
     compile 'com.loopj.android:android-async-http:1.4.5'
+    compile 'se.emilsjolander:stickylistheaders:2.6.0'
+    compile 'com.sothree.slidinguppanel:library:3.0.0'
 }
