--- a/SATSTrainingApp/app/build.gradle
+++ b/SATSTrainingApp/app/build.gradle
@@ -23,10 +23,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile files('libs/svg-android.jar')
-    compile 'com.loopj.android:android-async-http:1.4.5'
+    compile 'com.loopj.android:android-async-http:1.4.7'
     compile 'com.sothree.slidinguppanel:library:3.0.0'
     compile 'se.emilsjolander:stickylistheaders:2.6.0'
-    compile 'com.koushikdutta.ion:ion:2.+'
+//    compile 'com.koushikdutta.ion:ion:2.+'
     compile 'net.danlew:android.joda:2.7.2'
 
 }
