--- a/SATSTrainingApp/app/src/main/AndroidManifest.xml
+++ b/SATSTrainingApp/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="se.tuppload.android.satstrainingapp" >
+    package="se.tuppload.android.satstrainingapp">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,11 +18,10 @@
         </activity>
 
         <activity
-            android:name="se.tuppload.android.satstrainingapp.MoreInfoActivity"
-            android:label="Moreinfo">
+            android:name=".ShowActivityInfo"
+            android:label="Moreinfo" />
 
-        </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
