--- a/SATSTrainingApp/app/build.gradle
+++ b/SATSTrainingApp/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.7'
     compile 'com.sothree.slidinguppanel:library:3.0.0'
     compile 'se.emilsjolander:stickylistheaders:2.6.0'
-//    compile 'com.koushikdutta.ion:ion:2.+'
+//    compile 'com.google.apis:google-api-services-youtube:v3-rev137-1.20.0'
     compile 'net.danlew:android.joda:2.7.2'
 
 }
