--- a/SATSTrainingApp/app/src/main/AndroidManifest.xml
+++ b/SATSTrainingApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         <activity
             android:name=".ShowActivityInfo"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="Moreinfo" />
 
     </application>
