--- a/SATSTrainingApp/app/src/main/AndroidManifest.xml
+++ b/SATSTrainingApp/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
 
         <activity
             android:name=".ShowActivityInfo"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="Moreinfo" />
-
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 
