--- a/SATSTrainingApp/app/src/main/AndroidManifest.xml
+++ b/SATSTrainingApp/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -14,13 +15,12 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <activity
             android:name=".ShowActivityInfo"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="Moreinfo" />
-
 
         <activity android:name=".ShowMapActivity">
             <intent-filter>
@@ -29,12 +29,10 @@
             </intent-filter>
         </activity>
 
-
-
         <activity android:name=".ShowWebActivity">
             <intent-filter>
-                <action android:name=".ShowWebActivity"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name=".ShowWebActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
@@ -43,14 +41,17 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDH8CYjsWDT52okFv0Qcf5XiyY_-uYuZEA"/>
+            android:value="AIzaSyDH8CYjsWDT52okFv0Qcf5XiyY_-uYuZEA" />
     </application>
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-    <permission android:name="com.example.Map.permission.MAPS_RECEIVE"
+
+    <permission
+        android:name="com.example.Map.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"></permission>
+
     <uses-permission android:name="com.example.Map.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -59,7 +60,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
